| Bug #19454 | Some values of MaxNoOfTriggers can stop a server | ||
|---|---|---|---|
| Submitted: | 1 May 2006 10:16 | Modified: | 22 Dec 2006 4:42 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 4.1 -> | OS: | Linux (Linux FC4) |
| Assigned to: | Bugs System | Target Version: | |
[1 May 2006 10:16]
Serge Kozlov
[8 Sep 2006 10:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11603 ChangeSet@1.2255, 2006-09-08 16:41:30+08:00, Justin.He@qa3-104.qa.cn.tlan +12 -0 BUG#19454, Some values of MaxNoOfTriggers can stop a server the main modifications is following: 1. move the default parameter definition from ConfigInfo.cpp to a new header file 2. correct the segmentation fault when malloc mem in setSize() in ArrayPool.hpp 3. add a new mgmapi for map the parameter ID to it's corresponding name 4. modifiy something because the change of class 'ConfigInfo'
[8 Sep 2006 10:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11604 ChangeSet@1.2255, 2006-09-08 16:46:05+08:00, Justin.He@qa3-104.qa.cn.tlan +12 -0 BUG#19454, Some values of MaxNoOfTriggers can stop a server the main modifications is following: 1. move the default parameter definition from ConfigInfo.cpp to a new header file 2. correct the segmentation fault when malloc mem in setSize() in ArrayPool.hpp 3. add a new mgmapi for map the parameter ID to it's corresponding name 4. modifiy something because the change of class 'ConfigInfo'
[28 Sep 2006 13:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/12698 ChangeSet@1.2297, 2006-09-28 18:55:20+08:00, Justin.He@qa3-104.qa.cn.tlan +13 -0 Bug #19454, Some values of MaxNoOfTriggers can stop a server 1. move the default parameters definition from ConfigInfo.cpp to a new file 2. correct the segmentation fault in ArrayPool.hpp:setSize() 3. add a new mgmapi function to get info of a parameter 4. modify something because the changes of class ConfigInfo
[29 Sep 2006 8:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/12811 ChangeSet@1.2297, 2006-09-29 14:51:21+08:00, Justin.He@qa3-104.qa.cn.tlan +13 -0 Bug #19454, Some values of MaxNoOfTriggers can stop a server 1. move the default parameters definition from ConfigInfo.cpp to a new file 2. correct the segmentation fault in ArrayPool.hpp:setSize() 3. add a new mgmapi function to get info of a parameter 4. modify something because the changes of class ConfigInfo
[22 Dec 2006 4:42]
Jon Stephens
Thank you for your bug report. This issue has already been fixed in the latest released version of that product, which you can download at http://www.mysql.com/downloads/ Documented bugfix in 5.1.14 changelog.
